bases/apps/dashy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: dashy
    app.kubernetes.io/name: dashy
  name: dashy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: dashy
      app.kubernetes.io/name: dashy
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dashy
        app.kubernetes.io/name: dashy
    spec:
      containers:
      - image: lissy93/dashy:2.1.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        name: dashy
        volumeMounts:
        - name: dashy-config
          mountPath: /app/public/conf.yml
          subPath: config.yml
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        securityContext:
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: 80
          timeoutSeconds: 1
      volumes:
      - name: dashy-config
        configMap:
          name: dashy-config
