bases/apps/dashy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: dashy
    app.kubernetes.io/name: dashy
    app.kubernetes.io/service: dashy
  name: dashy
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: dashy
    app.kubernetes.io/name: dashy
  type: ClusterIP
